# keenet

./: .env.example  .gitignore  .npmrc  CONTRACT.md  README.md  capacitor.config.ts  components.d.ts  electron-builder.yml  eslint.config.js  index.html  landing.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
.github/workflows/: ci.yml  release-desktop.yml  release-mobile.yml
docs/: RELEASING.md
electron/: main.cjs  preload.cjs
scripts/: deploy-nextcloud.sh  gen-icons.mjs
src/: App.vue  main.ts  pwa.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css  themes.css
src/composables/: useAutoSave.ts  useClipboard.ts  useDesktop.ts  useKeyboardShortcuts.ts  useLock.ts  useOverlays.ts  useTheme.ts
src/const/: colors.ts  icons.ts
src/desktop/: register.ts  tauri-bridge.ts
src/domain/: audit.ts  auto-type.test.ts  auto-type.ts  csv.test.ts  csv.ts  generator.test.ts  generator.ts  hibp.test.ts  hibp.ts  kdbx-file.test.ts  kdbx-file.ts  kdbx-init.ts  kdbx-to-html.test.ts  kdbx-to-html.ts  markdown.test.ts  markdown.ts  otp.test.ts  otp.ts  ported.test.ts  references.ts  search.test.ts  search.ts  strength.test.ts  strength.ts
src/i18n/: index.ts  locales.test.ts
src/integrations/: nextcloud.ts
src/locales/: de-de.json  en-us.json  fr-fr.json
src/mobile/: mobile-file.ts  register.ts
src/storage/: backup.test.ts  backup.ts  cache.ts  desktop-file.ts  dropbox.ts  errors.ts  (+12 more)
(+51 files in other folders)
