[package]
name = "keenet"
version = "1.0.0"
description = "KeeNet desktop"
authors = ["KeeNet"]
edition = "2021"
rust-version = "1.77"

# The library the Tauri runtime links against; `main.rs` is a thin wrapper.
[lib]
name = "keenet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OS keychain: Keychain (macOS), Credential Manager (Windows), Secret Service
# (Linux, pure-Rust crypto so no system OpenSSL is required to build).
keyring = { version = "3", features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
  "crypto-rust",
] }
# Keystroke synthesis for auto-type.
enigo = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
